--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "photo-app",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "DEBUG=photo-app:* nodemon --inspect ./bin/www"
   },
   "dependencies": {
+    "bookshelf": "^1.1.1",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "express-validator": "^6.5.0",
+    "knex": "^0.21.1",
+    "lodash": "^4.17.15",
+    "morgan": "~1.9.1",
+    "mysql": "^2.18.1"
   }
 }
