--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "DEBUG=photo-app:* nodemon --inspect ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "bookshelf": "^1.1.1",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
